fix: improve contrast of light theme

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,24 +1,17 @@
 :root {
-  --slidev-theme-primary: #ffb402;
+  --slidev-theme-primary: #ffa202;
+}
+:root:not(.dark) {
+  --slidev-theme-primary: #961720;
 }
 
-h1 {
+.slidev-layout h1 {
+  font-size: 2.5rem;
   color: var(--slidev-theme-primary);
 }
 
-.slidev-layout.cover,
-.slidev-layout.intro {
-  @apply h-full grid;
-
-  h1 {
-    @apply text-6xl leading-20;
-  }
-
-  h1 + p {
-    @apply text-4xl;
-  }
-
-  p + h2, ul + h2, table + h2 {
-    @apply mt-10;
-  }
+.slidev-layout {
+  padding: 3.5rem 4.5rem;
+  font-size: 1.3rem;
+  line-height: 150%;
 }
